Bug 2046629 - Fix feature callout centered panel positions in RTL. r=omc-reviewers,layout-reviewers,dshin,emcminn
Feature callout centered panel positions were broken in RTL due to a
simple oversight. This patch fixes them.

It also adds a `flip` property to feature callouts, since I noticed that
some callout positions are more prone to overflowing the screen bounds
than others, but only by a tiny amount, where we wouldn't mind for them
to bleed a little bit. In other cases, we'd prefer for them to flip or
slide. So making this configurable is a good idea.

Since I was tweaking panel positions, I decided to finally add cardinal
direction aliases. This should make feature callout configuration more
user-friendly, since it's probably easier for some people to think in
terms of directions on a compass.

Differential Revision: https://phabricator.services.mozilla.com/D306050

UltraBlame original commit: e34ef79369d7294dd4bdd802b9bac2877ce264e7

--- a/browser/components/aboutwelcome/content/aboutwelcome.css
+++ b/browser/components/aboutwelcome/content/aboutwelcome.css
@@ -999,28 +999,28 @@ panel#feature-callout[arrow-position=bottom] {
 
 #feature-callout[arrow-position=inline-end] .arrow-box {
   top: var(--arrow-center-inset);
-  inset-inline-end: var(--arrow-offset);
+  right: var(--arrow-offset);
   --fc-arrow-clip-path: polygon(100% 0, 100% 100%, 98% 100%, 0 2%, 0 0);
 }
 panel#feature-callout[arrow-position=inline-end]::part(content) {
-  margin-inline-end: var(--panel-arrow-space);
+  margin-right: var(--panel-arrow-space);
 }
 
 panel#feature-callout[arrow-position=inline-end] {
-  margin-inline-end: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
+  margin-right: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
 }
 
 #feature-callout[arrow-position=inline-start] .arrow-box {
   top: var(--arrow-center-inset);
-  inset-inline-start: var(--arrow-offset);
+  left: var(--arrow-offset);
   --fc-arrow-clip-path: polygon(0 100%, 100% 100%, 100% 98%, 2% 0, 0 0);
 }
 panel#feature-callout[arrow-position=inline-start]::part(content) {
-  margin-inline-start: var(--panel-arrow-space);
+  margin-left: var(--panel-arrow-space);
 }
 
 panel#feature-callout[arrow-position=inline-start] {
-  margin-inline-start: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
+  margin-left: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
 }
 
 #feature-callout[arrow-position=top-end] .arrow-box {
@@ -1077,54 +1077,54 @@ panel#feature-callout[arrow-position=bottom-start] {
 
 #feature-callout[arrow-position=inline-end-top] .arrow-box {
   top: var(--arrow-corner-inset);
-  inset-inline-end: var(--arrow-offset);
+  right: var(--arrow-offset);
   --fc-arrow-clip-path: polygon(100% 0, 100% 100%, 98% 100%, 0 2%, 0 0);
 }
 panel#feature-callout[arrow-position=inline-end-top]::part(content) {
-  margin-inline-end: var(--panel-arrow-space);
+  margin-right: var(--panel-arrow-space);
 }
 
 panel#feature-callout[arrow-position=inline-end-top] {
-  margin-inline-end: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
+  margin-right: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
 }
 
 #feature-callout[arrow-position=inline-end-bottom] .arrow-box {
   bottom: var(--arrow-corner-inset);
-  inset-inline-end: var(--arrow-offset);
+  right: var(--arrow-offset);
   --fc-arrow-clip-path: polygon(100% 0, 100% 100%, 98% 100%, 0 2%, 0 0);
 }
 panel#feature-callout[arrow-position=inline-end-bottom]::part(content) {
-  margin-inline-end: var(--panel-arrow-space);
+  margin-right: var(--panel-arrow-space);
 }
 
 panel#feature-callout[arrow-position=inline-end-bottom] {
-  margin-inline-end: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
+  margin-right: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
 }
 
 #feature-callout[arrow-position=inline-start-top] .arrow-box {
   top: var(--arrow-corner-inset);
-  inset-inline-start: var(--arrow-offset);
+  left: var(--arrow-offset);
   --fc-arrow-clip-path: polygon(0 100%, 100% 100%, 100% 98%, 2% 0, 0 0);
 }
 panel#feature-callout[arrow-position=inline-start-top]::part(content) {
-  margin-inline-start: var(--panel-arrow-space);
+  margin-left: var(--panel-arrow-space);
 }
 
 panel#feature-callout[arrow-position=inline-start-top] {
-  margin-inline-start: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
+  margin-left: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
 }
 
 #feature-callout[arrow-position=inline-start-bottom] .arrow-box {
   bottom: var(--arrow-corner-inset);
-  inset-inline-start: var(--arrow-offset);
+  left: var(--arrow-offset);
   --fc-arrow-clip-path: polygon(0 100%, 100% 100%, 100% 98%, 2% 0, 0 0);
 }
 panel#feature-callout[arrow-position=inline-start-bottom]::part(content) {
-  margin-inline-start: var(--panel-arrow-space);
+  margin-left: var(--panel-arrow-space);
 }
 
 panel#feature-callout[arrow-position=inline-start-bottom] {
-  margin-inline-start: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
+  margin-left: calc(-1 * (var(--panel-box-shadow-margin) + var(--arrow-overlap-magnitude)));
 }
 
 :root[ai-window] #feature-callout {
